fixed button alignment in home card

--- a/styles/mystyles.css
+++ b/styles/mystyles.css
@@ -38,10 +38,7 @@
 
 .card div {
   border: rgb(233, 230, 224) solid 1px;
-  margin: 5px;
-  min-height: 30px;
-  min-width: 200px;
-  align-items: flex-end;
+  margin: 0px;
 }
 
 .col-sm-4 button {
@@ -50,12 +47,22 @@
   margin: 5px;
 }
 
+.col-sm-4 .flextime {
+  align-items: center;
+  justify-content: center;
+}
+
 .flexytime {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-self: flex-end;
   height: auto;
-  padding: 0.5rem;
+  padding: 1px;
   border: 1px solid rgb(163, 157, 157);
+  position: absolute;
+  bottom: 1px;
+  left: 10%;
+}
+
+.col-sm-4 {
+  display: flex;
+  padding: 2px;
+  margin: 5px;
 }
